# Windows_Kernel_Parsing

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  VISION.md  class_list.txt  cli_output2.txt  demo_ndis_audit.py  main.py  pyproject.toml  requirements.txt  sample_interface.json  setup.py  ssdeep_err.txt  ssdeep_err2.txt  test_out.txt  vulture_out.txt
.github/workflows/: ci.yml
logic_flow/: __init__.py  bench.py  cli.py  main.py
logic_flow/core/: __init__.py  advanced_lifter.py  analysis_context.py  analyzer.py  baseline_manager.py  batch_analyzer.py  batch_processing.py  benchmark.py  cache_manager.py  cross_arch_matcher.py  diaphora_heuristics.py  diff_pipeline.py  diff_reflecting.py  diff_report.py  disasm_provider.py  driver_families.py  engine.py  fuzzy_hash.py  ground_truth.py  heuristics_config.py  ida_analysis_script.py  ida_provider.py  index_store.py  ioctl_scanner.py  ir_normalizer.py  logic_graph.py  poc_helper.py  protocol.py  protocol_v2.py  query_pipeline.py  reliability.py  security_diff.py  security_model.py  selective_equivalence.py  semantic_diff.py  silent_patch_finder.py  similarity_engine.py  symbolic_execution.py  taint_analysis.py
logic_flow/edr/: monitor.py  signatures.py
logic_flow/fuzzing/: __init__.py  corpus_generator.py  harness_generator.py
logic_flow/gui/: __init__.py  cytoscape_widget.py  log_viewer.py  main_window.py  poc_widget.py  resources.py  widgets.py
logic_flow/native_core/: Cargo.toml  pyproject.toml
logic_flow/native_core/src/: lib.rs  matcher.rs  minhash.rs  simhash.rs  winnowing.rs  wl_hash.rs
logic_flow/pwn/: __init__.py  double_fetch.py  exploit_generator.py  pwn_orchestrator.py  taint_engine.py
logic_flow/report/: __init__.py  html_generator.py
logic_flow/surface/: __init__.py  extractor.py
logic_flow/triage/: __init__.py  dedup.py
logic_flow/utils/: __init__.py  config.py  cytoscape_exporter.py  logging_utils.py  qt_helper.py
samples/: README.md  ndis_miniport_v1.json  ndis_miniport_v2.json  test_new.json  test_old.json
schemas/: export_v1.md  export_v2.md
tests/: run_gui_legacy.py  smoke_test_diff.py  startup_debug.py  test_benchmark.py  test_cross_arch.py  test_diff_pipeline.py  test_diff_reflecting_safety.py  test_ida_client.py  test_index_store.py  test_logic_graph.py  test_logic_graph_fix.py  test_native_binding.py  test_protocol_v2.py  test_provider_mock.py  test_query_pipeline.py  test_security_diff.py  test_two_pass_analysis.py  verify_module_1.py  verify_refactor.py  verify_split_architecture.py  verify_syntax.py
tests/fakes/: triage_report.json
